events happen now

--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html>
 
 <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>PSCS Clicker</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <link rel="stylesheet" href="style.css">
 
 </head>
 
@@ -13,12 +16,8 @@
     <div id="app">
         <stat-area></stat-area>
         <click-area></click-area>
-
         <store-area></store-area>
-
     </div>
-
-
 
 </body>
 
