--- a/index.html
+++ b/index.html
@@ -2,13 +2,23 @@
 <html>
 
 <head>
+
+    <title>PSCS Clicker</title>
+
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>PSCS Clicker</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="PSCSClicker" />
+    <meta property="og:description" content="Cookieclicker but for PSCS." />
+    <meta property="og:image" content="img/icon.png" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0-beta.1/axios.min.js'></script>
+    <link id='favicon' rel="icon" type="image/png" href="img/icon.png" />
+    <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
 
 </head>
 
