--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="PSCSClicker" />
     <meta property="og:description" content="Cookieclicker but for PSCS." />
-    <meta property="og:image" content="img/icon.png" />
+    <meta property="og:image" content="img/icon.jpg" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0-beta.1/axios.min.js'></script>
-    <link id='favicon' rel="icon" type="image/png" href="img/icon.png" />
+    <link id='favicon' rel="icon" type="image/jpg" href="img/icon.jpg" />
     <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
 
 </head>
