--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
     <meta property="og:description" content="Cookieclicker but for PSCS." />
     <meta property="og:image" content="img/icon.jpg" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0-beta.1/axios.min.js'></script>
     <link id='favicon' rel="icon" type="image/jpg" href="img/icon.jpg" />
     <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
+
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0-beta.1/axios.min.js" defer></script>
+    <script src="main.js" defer></script>
 
 </head>
 
@@ -32,6 +33,6 @@
 
 </body>
 
-<script src="main.js"></script>
+
 
 </html>
