--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <stat-area></stat-area>
         <click-area></click-area>
         <store-area></store-area>
+        <news-area></news-area>
     </div>
 
 </body>
