add links area, update css, remove github commit ticker

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js" defer></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0-beta.1/axios.min.js" defer></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0-beta.1/axios.min.js" defer></script> -->
     <script src="main.js" defer></script>
 
 </head>
@@ -30,6 +30,7 @@
         <click-area></click-area>
         <store-area></store-area>
         <news-area></news-area>
+        <link-area></link-area>
     </div>
 
 </body>
